# ABCMS

./: README.md
automotive-bcm/: .gitignore  CMakeLists.txt  README.md
automotive-bcm/config/: bcm_config.h  can_ids.h
automotive-bcm/docs/: architecture.md  state_machines.md  testing_strategy.md
automotive-bcm/include/: bcm.h  can_interface.h  door_control.h  fault_manager.h  lighting_control.h  system_state.h  turn_signal.h
automotive-bcm/src/: bcm.c  can_interface.c  can_rx.c  can_tx.c  door_control.c  fault_manager.c  lighting_control.c  main.c  system_state.c  turn_signal.c
automotive-bcm/tests/: CMakeLists.txt  test_door_control.cpp  test_fault_manager.cpp  test_lighting_control.cpp  test_main.cpp
automotive-bcm/tools/: can_simulator.py
